# rust-erp-web

./: .env  Cargo.toml  README.MD  index.html
assets/: script.js  style.css
src/: handlers.rs  main.rs  models.rs
