[package]
name = "web_server_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework & WebSocket
axum = { version = "0.7", features = ["ws"] }

tokio = { version = "1.0", features = ["full"] }

# Xử lý luồng dữ liệu (Stream) cho WebSocket
futures = "0.3"

# JSON & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & Environment
dotenvy = "0.15"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
rand = "0.8"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4.1"